# eblind

./: .gitattributes  .gitignore  Cargo.toml  build.rs  espflash.toml  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
cad/: find_torx_size.scad  motor-blind-adapter.scad  triang.scad
firmware/: .env  Cargo.toml  build.rs  partitions.csv
firmware/src/: button.rs  environment.rs  led.rs  storage.rs
firmware/src/matter/: mod.rs  position.rs  window_covering_handler.rs
firmware/src/movement/: mod.rs  rmt.rs  rmt_utils.rs  stepper_controller.rs  stepper_driver.rs
firmware/src/tmc2209_helper/: driver_utils.rs
src/: button.rs  environment.rs  executor.rs  led.rs  lib.rs  main.rs  storage.rs
src/matter/: mod.rs  position.rs  window_covering_handler.rs
src/movement/: custom_tx_driver.rs  mod.rs  rmt_utils.rs  stepper_controller.rs  stepper_driver.rs
src/tmc2209_helper/: driver_utils.rs  mod.rs
src/utils/: async_queue.rs  async_uart_driver.rs  mod.rs
