[package]
edition = "2024"
name = "eblind"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "eblind"
path = "./src/bin/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lib]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413", features = ["log-04", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "log-04",
  "embassy",
  "esp-alloc",
  "esp32s3",
  "esp-radio"
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04", "esp32s3"] }

embassy-executor = { version = "0.9", features = [] }
embassy-time = { version = "0.5", features = [] }
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = [] }

esp-alloc = { version = "0.9.0", features = [] }
esp-storage = { version = "0.8", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println"
] }
esp-println = { version = "0.16.1", features = ["log-04", "esp32s3"] }

esp-metadata-generated = "*"
# To allow debug printing of registers
esp32s3 = { version = "*", features = ["impl-register-debug"] }

critical-section = "1.2.0"

embedded-io = "0.7"
embedded-io-async = "0.7"

log = "0.4"
anyhow = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
static_cell = "2"

smart-leds = "0.4.0"
ws2812-spi = { version = "0.5.1", features = ["mosi_idle_high"] }
button-driver = { version = "0.2.3", features = ["embassy", "embedded_hal"] }

# This is used to read environment variables at compile-time to configure the project
const-dotenvy = "0.1"

tmc2209 = "0.3"
bincode = { version = "2", default-features = false, features = ["alloc", "derive"] }
embassy-embedded-hal = { version = "0.5", features = [] }
lazy_static = { version = "1", features = ["spin_no_std"] }
enumset = "1"
esp-nvs = { version = "0.2", features = ["esp32s3"] }
rs-matter-embassy = { git = "https://github.com/sysgrok/rs-matter-embassy", rev = "efe713d", features = ["embassy-net", "esp", "log"] }
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next", default-features = false, features = ["backtrace", "log"] }
esp-radio = { version = "*", features = ["esp32s3", "log-04", "unstable"] }
embedded-storage = "0.3.1"

[patch.crates-io]
# TODO: Update these to published versions once they are available on crates.io
#
# There have been a lot of changes in the esp-hal code since the last release (1.0.0),
# which is why this project is targeting the git version of esp-hal instead of the latest
# published version.
#
# esp-hal consists of a lot of different crates, and there can be problems if some of them
# are from crates.io and some are from git. To avoid this, we patch all of the esp-hal
# crates to use the git version.
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
#esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
#esp-config = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
xtensa-lx = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
xtensa-lx-rt = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-sync = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
#esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
esp-phy = { git = "https://github.com/esp-rs/esp-hal", rev = "01e9413" }
# rs-matter and its related crates are currently not published on crates.io, or have not been
# updated in a long time. Therefore they are also patched to use the git version.
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack.git", branch = "next" }
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "next" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
#lto = 'fat' # TODO: errors with failed to load esp-wifi-sys bitcode
opt-level = 's'
overflow-checks = false
